# pydeploy

./: .gitignore  LICENSE.TXT  pyproject.toml  readme.md
examples/desktop_web/: pyproject.toml  readme.md
examples/desktop_web/src/desktop_web/: __init__.py
examples/hello_world_cli/: hello_world.py  pyproject.toml  readme.md
examples/numpy_example/: pyproject.toml  readme.md
examples/numpy_example/src/numpy_example/: __init__.py
examples/pygame_asset/: pyproject.toml  readme.md
examples/pygame_asset/src/pygame_example/: __init__.py
examples/pygame_gui/: pyproject.toml  readme.md
examples/pygame_gui/src/pygame_example/: __init__.py
examples/tkinter/: hello_world.py  pyproject.toml  readme.md
src/pydeploy/: __main__.py  deploy.py
